Bug 778114: Move notification sound preference check so that sound plays for new IM messages when new mail sound is disabled. r=irving